--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+VITE_FIREBASE_API_KEY=AIzaSyDRMvqnn6RFF83-5BvQR9x1G_u2nCoXJr0
+VITE_FIREBASE_AUTH_DOMAIN=happy-d3214.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=happy-d3214
+VITE_FIREBASE_STORAGE_BUCKET=happy-d3214.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=390711322269
+VITE_FIREBASE_APP_ID=1:390711322269:web:d9ecb57d8dee656f685674
+VITE_FIREBASE_MEASUREMENT_ID=G-7GCR6Y010B
 VITE_GEMINI_API_KEY=AIzaSyDpQtm7WnWXNc1v_Rydlf24vJ9TMtDPdTk
-
 VITE_CLAUDE_API_KEY=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
 
 # Frontend environment variables (with VITE_ prefix for Vite)
@@ -27,3 +33,4 @@ DEFAULT_COUNTRY=your_country_code
 
 # Automatic Monitoring Configuration
 DEFAULT_USER_EMAIL=mailrajeshpaudel@gmail.com
+GOOGLE_MAP_API_KEY = 
