fixed env things

--- a/.env
+++ b/.env
@@ -33,4 +33,5 @@ DEFAULT_COUNTRY=your_country_code
 
 # Automatic Monitoring Configuration
 DEFAULT_USER_EMAIL=mailrajeshpaudel@gmail.com
-GOOGLE_MAP_API_KEY = 
+
+VITE_GOOGLE_MAP_API_KEY = AIzaSyCeS13wcn-5QnDT1W6xEk0I3rAgWCDTSjE
